# FolderFirewall

./: .gitignore  LICENSE  README.md  README_RUN.md  h origin main --force-with-lease  pyproject.toml  requirements.txt  run_firewall.sh  sessions.json  vercel.json
.github/workflows/: ci.yml
backend/: app.py  cli.py  daemon.py  key_manager.py  run_firewall.sh  secure_snapshot.py  session_manager.py  sessions.py
backend/api/: index.py
backend/core/: alerts.py  audit.py  hashes.py  sandbox.py  scanner.py  session_manager.py  session_store.py  snapshot.py
backend/plugins/: base.py  entropy.py  loader.py  shebang.py
backend/sandbox/: docker_engine.py  docker_sandbox.py
docker/: sandbox.Dockerfile
docs/: architecture.md  security.md
docs/design/: architecture.md
folderfirewall.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: create_encrypted_loop.sh  create_sample_files.sh  git_sync.sh  run_clone_podman.sh  snapshot_clone.sh  snapshot_secure.sh  upgrade_pip.sh
security/: seccomp-default.json
snapshots/: 2ca6d4b9.json  86966346.json  a1df34c5.json
tests/: test_scripts.py
ui/: app.py  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
ui/ui/: renderer.js  styles.css
