[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "folderfirewall"
version = "0.1.0"
description = "Terminal-based folder sandbox and security firewall"
authors = [{ name = "DuruObi" }]
dependencies = [
    "typer",
    "rich",
    "docker",
    "fastapi",
    "uvicorn",
    "watchdog"
]

[project.scripts]
folderfirewall = "backend.cli:app"

[tool.setuptools]
packages = ["backend"]

[tool.setuptools.package-dir]
backend = "backend"
